Increase nav z-index to prevent ordering issues
with iframe loading text

--- a/src/asset/css/components/i-page.css
+++ b/src/asset/css/components/i-page.css
@@ -19,7 +19,7 @@
 
 .i-nav-select {
 	position: fixed;
-	z-index: 2;
+	z-index: 100;
 	top: 0;
 	width: 100%;
 	min-height: 60px;
